crates/escalier/tests/pass/conditional_types.esc
type GetTypeName<T: boolean| number | string> = match (T) {
    boolean => "boolean",
    number => "number",
    _ => "string",
}

let a: GetTypeName<true> = "boolean"
let b: GetTypeName<5> = "number"
let c: GetTypeName<"hello"> = "string"
