crates/escalier/tests/errors/incompatible_types.esc
let add = fn (a: number, b: number) -> number => a + b
let sum: string = add("hello", "world")

let add = fn (a, b) => a + b
add("hello", "world")

let a: number = 5
let b: number = "5"
